--- a/Classes/HowToController.xib
+++ b/Classes/HowToController.xib
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HowToController">
@@ -17,33 +20,32 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" ambiguous="YES" misplaced="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzh-Eg-hgU">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzh-Eg-hgU">
                     <rect key="frame" x="20" y="63" width="280" height="155"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" staticText="YES"/>
                     </accessibility>
                     <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="128" id="MnN-g1-vep"/>
+                        <constraint firstAttribute="height" constant="155" id="0rZ-oY-Pld"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
                 </textView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yhC-VI-zEJ">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yhC-VI-zEJ">
                     <rect key="frame" x="20" y="226" width="280" height="322"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yhC-VI-zEJ" secondAttribute="trailing" constant="20" id="3x0-e7-DF2"/>
-                <constraint firstItem="xzh-Eg-hgU" firstAttribute="top" secondItem="1" secondAttribute="top" constant="63" id="HE4-F3-ryi"/>
-                <constraint firstItem="yhC-VI-zEJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1" secondAttribute="leading" constant="20" id="IZn-Gh-kNW"/>
-                <constraint firstItem="yhC-VI-zEJ" firstAttribute="width" secondItem="xzh-Eg-hgU" secondAttribute="width" priority="477" id="eR3-nj-NnH"/>
-                <constraint firstAttribute="centerX" secondItem="xzh-Eg-hgU" secondAttribute="centerX" id="ftB-RS-O4i"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="yhC-VI-zEJ" secondAttribute="bottom" constant="20" id="ghW-XE-yiH"/>
-                <constraint firstAttribute="centerX" secondItem="yhC-VI-zEJ" secondAttribute="centerX" id="osL-Jd-pgu"/>
-                <constraint firstItem="yhC-VI-zEJ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="xzh-Eg-hgU" secondAttribute="bottom" constant="18" id="yUc-Cx-CCm"/>
+                <constraint firstAttribute="trailing" secondItem="xzh-Eg-hgU" secondAttribute="trailing" constant="20" id="6RQ-6X-YUk"/>
+                <constraint firstAttribute="trailing" secondItem="yhC-VI-zEJ" secondAttribute="trailing" constant="20" id="SY5-93-01Y"/>
+                <constraint firstAttribute="bottom" secondItem="yhC-VI-zEJ" secondAttribute="bottom" constant="20" id="YHy-Uy-Ic4"/>
+                <constraint firstItem="yhC-VI-zEJ" firstAttribute="top" secondItem="xzh-Eg-hgU" secondAttribute="bottom" constant="8" id="e1j-PE-LEt"/>
+                <constraint firstItem="yhC-VI-zEJ" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="j5t-b6-uQD"/>
+                <constraint firstItem="xzh-Eg-hgU" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="lKF-FM-nwA"/>
+                <constraint firstItem="xzh-Eg-hgU" firstAttribute="top" secondItem="1" secondAttribute="top" constant="63" id="qBh-rQ-tZQ"/>
             </constraints>
         </view>
     </objects>
