--- a/Main.storyboard
+++ b/Main.storyboard
@@ -14,7 +14,7 @@
             <objects>
                 <viewController id="dge-RM-wBU" customClass="FileDataViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1DH-ya-r9g">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ae1-1s-SRu">
@@ -27,7 +27,7 @@
                                 </connections>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cVz-JP-Igz">
-                                <rect key="frame" x="16" y="156" width="343" height="418"/>
+                                <rect key="frame" x="16" y="156" width="343" height="467"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -70,14 +70,42 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ffc-ac-Ec4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1309.5999999999999" y="-915.29235382308855"/>
+            <point key="canvasLocation" x="874" y="665"/>
+        </scene>
+        <!--Edit View Controller-->
+        <scene sceneID="Lei-Yi-kF5">
+            <objects>
+                <tableViewController id="9lW-Nk-e8g" customClass="EditViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ByK-q8-fg2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditColumnCell" id="qXd-hX-QfY">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qXd-hX-QfY" id="PpT-Xg-UHd">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9lW-Nk-e8g" id="i5e-EH-Lwq"/>
+                            <outlet property="delegate" destination="9lW-Nk-e8g" id="Lwb-ZS-oPK"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dF3-Vt-szh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1742" y="664"/>
         </scene>
         <!--Files View Controller-->
         <scene sceneID="Uxg-ws-PVe">
             <objects>
                 <tableViewController id="0Yt-XR-lmL" customClass="FilesViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ARf-3C-mxb">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -110,7 +138,7 @@
             <objects>
                 <tableViewController id="yKV-vJ-ur4" customClass="ItemsViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qRd-ft-2oG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -128,23 +156,58 @@
                             <outlet property="delegate" destination="yKV-vJ-ur4" id="4gZ-QL-qrA"/>
                         </connections>
                     </tableView>
+                    <toolbarItems>
+                        <barButtonItem systemItem="edit" id="dz3-P4-gwo">
+                            <connections>
+                                <segue destination="9lW-Nk-e8g" kind="show" identifier="ToEdit" id="oP3-ah-JeY"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem image="4lines.png" id="pdf-VF-k4G">
+                            <connections>
+                                <action selector="decreaseTableViewSize" destination="yKV-vJ-ur4" id="S6n-Js-JpJ"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem image="2lines.png" id="0ps-lE-zjl">
+                            <connections>
+                                <action selector="increaseTableViewSize" destination="yKV-vJ-ur4" id="HKO-nA-QCS"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem title="↓" id="9SS-YP-gEn">
+                            <connections>
+                                <action selector="toggleItemSortOrder" destination="yKV-vJ-ur4" id="UNF-PL-EwS"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="LBm-le-iYw"/>
+                        <barButtonItem enabled="NO" title="#" id="95b-yr-lIs"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="zT4-gJ-k7l">
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Item" id="KKc-nJ-Fbb"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="enlargeItemsButton" destination="0ps-lE-zjl" id="vJH-mN-Uuj"/>
+                        <outlet property="itemsCountButton" destination="95b-yr-lIs" id="E5W-Ia-rvs"/>
+                        <outlet property="modificationDateButton" destination="KKc-nJ-Fbb" id="aym-bw-njg"/>
+                        <outlet property="shrinkItemsButton" destination="pdf-VF-k4G" id="9B7-l2-LmX"/>
+                        <outlet property="sortOrderButton" destination="9SS-YP-gEn" id="73G-T1-bZu"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AqZ-bX-mkz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1626" y="-134"/>
+            <point key="canvasLocation" x="1742" y="-134"/>
         </scene>
         <!--Data View Controller-->
         <scene sceneID="Tto-Km-WAj">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HMm-SB-a07" customClass="CSVDataViewController" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="HMm-SB-a07" customClass="CSVDataViewController" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8Hb-Tp-Dbz">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="jlf-VE-ugu">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
                     <connections>
@@ -156,4 +219,8 @@
             <point key="canvasLocation" x="142" y="-134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="2lines.png" width="20" height="24"/>
+        <image name="4lines.png" width="20" height="24"/>
+    </resources>
 </document>
